<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentNewsDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <FrameLayout
                android:id="@+id/newsDetailHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="start|center_vertical"
                    android:clickable="true"
                    android:contentDescription="@string/btn_back"
                    android:focusable="true"
                    android:src="@drawable/ic_arrow_left"
                    app:tint="@color/on_background" />

                <TextView
                    android:id="@+id/tvPublishedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    tools:text="4:20 / 11.11.1111" />

                <ImageView
                    android:id="@+id/btnFavorite"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="end|center_vertical"
                    android:clickable="true"
                    android:contentDescription="@string/btn_add_favorite"
                    android:focusable="true"
                    android:src="@drawable/ic_favorites_selector"
                    app:tint="@color/on_background" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:textColor="@color/on_background"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newsDetailHeader"
                tools:text="Заголовок новости" />

            <ImageView
                android:id="@+id/imgNews"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/desc_news_image"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:src="@drawable/placeholder_news_image" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:textColor="@color/on_surface"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgNews"
                tools:text="Описание новости." />

            <TextView
                android:id="@+id/tvReadMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/read_full"
                android:textColor="#FF1E88E5"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReadMore"
                tools:text="Автор: Васька Пупкин" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>